# datastructures_algorithms

./: .gitignore  README.md  pyproject.toml
src/: InterviewQuestions.py  Section6LeetcodePractice.py  palindrome_string.py
src/DataStructuresAlgorithms.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/arrays/: twoDimArray.py
src/binary_heap/: binary_heap.py
src/binary_search_tree/: binary_search_tree_bst.py
src/binary_search_tree/practice/: bst_practice.py
src/graph/: breadth_first_search.py  graph.py
src/linked_lists/: LinkedList-Elshad.py  circular_doubly_linked_list.py  circular_link_list_prac.py  doubly_linked_list.py  singly_linked_list_practice.py  singly_linkedlist_updated.py
src/queues_lib/: Q5_AnimalShelter.py  important notes.md  queue_circular_list.py  queue_circular_list_practice.py  queue_linked_list.py  queue_linked_list_practice.py  queue_list.py  queue_list_limited_size.py  queue_list_practice.py
src/recursion/: recursion_practice_set1.py  recursion_practice_set2.py
src/searching/: binary_search.py
src/sorting/: bubble_sort.py  heap_sort.py  insertion_sort.py  merge_sort.py  quicksort.py  selection_sort.py
src/stacks/: stack_linked_list_practice.py  stack_list_limited.py  stack_list_practice.py
src/stacks/stack interview questions/: multistack_single_list.py  queue_stacks.py  stack_minimum.py  stack_of_plates.py
src/stacks/stacks _secondary/: stack_using_linkedlist.py
src/trees/: avl_tree.py  binary_search_tree_bst.py  binary_tree_linked_list.py  binary_tree_list.py
src/tries/: trie.py
(+2 files in other folders)
