[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DataStructuresAlgorithms"
version = "0.0.0"
description = "Example package for local development"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
